unpackaged/main/default/objects/Account/fields/AA_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>AA_Completed_Date__c</fullName>
    <label>AA Completed Date</label>
    <type>DateTime</type>
</CustomField>