unpackaged/main/default/objects/Account/fields/Account_code__c.field-meta.xml
<CustomField>
    <fullName>Account_code__c</fullName>
    <description>This is the unique ID for this account within SFDC and may be used for mapping across other systems (ERP, etc)</description>
    <displayFormat>ACC-{000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>This is the unique ID for this account within SFDC and may be used for mapping across other systems (ERP, etc)</inlineHelpText>
    <label>Account code</label>
    <type>AutoNumber</type>
</CustomField>