unpackaged/main/default/objects/Account/fields/Account_Long_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Long_ID__c</fullName>
    <description>Denotes the 18 digit id of the record</description>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Denotes the 18 digit id of the record</inlineHelpText>
    <label>Account Long ID</label>
    <type>Text</type>
</CustomField>