unpackaged/main/default/objects/Account/fields/Account_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_2__c</fullName>
    <description>Denotes the parents name if there is parent</description>
    <formula>IF(ISBLANK(Parent.Name),Name, Parent.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Denotes the parents name if there is parent</inlineHelpText>
    <label>Group Name</label>
    <type>Text</type>
</CustomField>