unpackaged/main/default/objects/Account/fields/Account_Overdue_Balance__c.field-meta.xml
<CustomField>
    <fullName>Account_Overdue_Balance__c</fullName>
    <label>Overdue Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>