unpackaged/main/default/objects/Account/fields/Account_Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Previous_Status__c</fullName>
    <description>Stores the previous Status of Account when Status changes to Active</description>
    <label>Account Previous Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>