unpackaged/main/default/objects/Account/fields/Account_Rule__c.field-meta.xml
<CustomField>
    <fullName>Account_Rule__c</fullName>
    <description>Denotes the account rule of agents which corresponds to the subscription</description>
    <inlineHelpText>Denotes the account rule of agents which corresponds to the subscription</inlineHelpText>
    <label>Account Rule</label>
    <length>40</length>
    <type>Text</type>
</CustomField>