unpackaged/main/default/objects/Account/fields/Account_Rule_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Rule_Code__c</fullName>
    <defaultValue>IF( $RecordType.DeveloperName = &quot;Agent&quot;, &quot;TRIAL&quot;, &quot;&quot;)</defaultValue>
    <description>Denotes account rule code (short text) for the account rule</description>
    <inlineHelpText>Denotes account rule code (short text) for the account rule</inlineHelpText>
    <label>Account Rule Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>