unpackaged/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>This field is set by AccountBeforeInsertUpdate.trigger / MN 2015-01-06</description>
    <label>Account Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>