unpackaged/main/default/objects/Account/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the real estate/property agency to which the agent belongs to</description>
    <inlineHelpText>Denotes the real estate/property agency to which the agent belongs to</inlineHelpText>
    <label>Agency</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select proper Agency Account.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agents</relationshipLabel>
    <relationshipName>Agency</relationshipName>
    <type>Lookup</type>
</CustomField>