unpackaged/main/default/objects/Account/fields/Agency_Id__c.field-meta.xml
<CustomField>
    <fullName>Agency_Id__c</fullName>
    <description>Denotes the unique id of an agency in PG system</description>
    <externalId>true</externalId>
    <inlineHelpText>Denotes the unique id of an agency in PG system</inlineHelpText>
    <label>Agency Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>