unpackaged/main/default/objects/Account/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <description>Denotes the agency name to which the agent belongs to</description>
    <inlineHelpText>Denotes the agency name to which the agent belongs to</inlineHelpText>
    <label>Agency Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>