unpackaged/main/default/objects/Account/fields/AgentKey__c.field-meta.xml
<CustomField>
    <fullName>AgentKey__c</fullName>
    <description>Denotes a unique key specifying the countrycodes(SG,MY,TH,ID) and the unique id in PG system</description>
    <externalId>true</externalId>
    <inlineHelpText>Denotes a unique key specifying the countrycodes(SG,MY,TH,ID) and the unique id in PG system</inlineHelpText>
    <label>AgentKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>