unpackaged/main/default/objects/Account/fields/AgentNet_Error__c.field-meta.xml
<CustomField>
    <fullName>AgentNet_Error__c</fullName>
    <description>Denotes the error reported from PG system when account record details are synced</description>
    <inlineHelpText>Denotes the error reported from PG system when account record details are synced</inlineHelpText>
    <label>AgentNet Error</label>
    <type>TextArea</type>
</CustomField>