unpackaged/main/default/objects/Account/fields/AgentNet_ID__c.field-meta.xml
<CustomField>
    <fullName>AgentNet_ID__c</fullName>
    <description>Denotes a numeric id of agents in PG system</description>
    <inlineHelpText>Denotes a numeric id of agents in PG system</inlineHelpText>
    <label>AgentNet ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>