unpackaged/main/default/objects/Account/fields/Approval_Requester_Comment__c.field-meta.xml
<CustomField>
    <fullName>Approval_Requester_Comment__c</fullName>
    <description>Denotes the comment by approval seeker(sales person) when seeking approvals for VIP status of agents</description>
    <inlineHelpText>Denotes the comment by approval seeker(sales person) when seeking approvals for VIP status of agents</inlineHelpText>
    <label>Approval Requester Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>