unpackaged/main/default/objects/Account/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Denotes the approval status for an agent in the VIP approval process</description>
    <inlineHelpText>Denotes the approval status for an agent in the VIP approval process</inlineHelpText>
    <label>Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>