unpackaged/main/default/objects/Account/fields/B2B_external_Field__c.field-meta.xml
<CustomField>
    <fullName>B2B_external_Field__c</fullName>
    <label>B2B External Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>