unpackaged/main/default/objects/Account/fields/B2B_ipp_REA__c.field-meta.xml
<CustomField>
    <fullName>B2B_ipp_REA__c</fullName>
    <label>B2B ipp REA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>