unpackaged/main/default/objects/Account/fields/Billing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Code__c</fullName>
    <description>Used to maintain Customer master integration</description>
    <formula>TEXT(BillingCountryCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country Code Formula</label>
    <type>Text</type>
</CustomField>