unpackaged/main/default/objects/Account/fields/Billing_email__c.field-meta.xml
<CustomField>
    <fullName>Billing_email__c</fullName>
    <inlineHelpText>The invoice will be sent to this address</inlineHelpText>
    <label>Billing email</label>
    <type>Email</type>
</CustomField>