unpackaged/main/default/objects/Account/fields/Birthdate_Verified__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether the birthdate of an agent is verified by PG</description>
    <inlineHelpText>Denotes whether the birthdate of an agent is verified by PG</inlineHelpText>
    <label>Birthdate Verified</label>
    <type>Checkbox</type>
</CustomField>