unpackaged/main/default/objects/Account/fields/Branch_ID__c.field-meta.xml
<CustomField>
    <fullName>Branch_ID__c</fullName>
    <description>Denotes branch id of entity/organisation</description>
    <inlineHelpText>Denotes branch id of entity/organisation</inlineHelpText>
    <label>Branch ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>