unpackaged/main/default/objects/Account/fields/Brickz_Agent__c.field-meta.xml
<CustomField>
    <fullName>Brickz_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brickz Agent</label>
    <type>Checkbox</type>
</CustomField>