unpackaged/main/default/objects/Account/fields/CEA_License__c.field-meta.xml
<CustomField>
    <fullName>CEA_License__c</fullName>
    <description>Denotes the agency license number registered under a governing authority</description>
    <externalId>true</externalId>
    <inlineHelpText>Denotes the agency registration number issued by CEA for SG agencies and MIEA for MY agencies</inlineHelpText>
    <label>Agency Identification Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>