unpackaged/main/default/objects/Account/fields/CEA_Salesperson_Number__c.field-meta.xml
<CustomField>
    <fullName>CEA_Salesperson_Number__c</fullName>
    <description>Denotes the agent license number registered under a governing authority</description>
    <inlineHelpText>Denotes the agent registration number issued by CEA for SG agents and MIEA for MY agents</inlineHelpText>
    <label>Agent Identification Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>