unpackaged/main/default/objects/Account/fields/Commando_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Commando_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commando Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>