unpackaged/main/default/objects/Account/fields/Commandos_Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Commandos_Sales_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture the sales head of the logged in sales rep user</description>
    <label>Commandos Sales Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>