unpackaged/main/default/objects/Account/fields/Commandos_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Commandos_Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the team lead in commandos sales team whose responsible for agency relationship</description>
    <inlineHelpText>Denotes the team lead in commandos sales team whose responsible for agency relationship</inlineHelpText>
    <label>Commandos Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>