unpackaged/main/default/objects/Account/fields/Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Date__c</fullName>
    <description>Denotes the date when an agent has confirmed his/her identity using email and SMS verification with PG</description>
    <inlineHelpText>Denotes the date when an agent has confirmed his/her identity using email and SMS verification with PG</inlineHelpText>
    <label>Confirmation Date</label>
    <type>DateTime</type>
</CustomField>