unpackaged/main/default/objects/Account/fields/Corporate_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Brand_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the main brand of this advertiser. Volvo Corporation AB would probably have Volvo as the brand name.</inlineHelpText>
    <label>Corporate Brand Name</label>
    <referenceTo>Corporate_Brand_Name__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>