unpackaged/main/default/objects/Account/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>if(  BEGINS($UserRole.Name, &quot;TH&quot;),&quot;Thailand&quot;,if(ISPICKVAL($User.Subsidiary__c,&quot;MyProperty Data Sdn. Bhd.&quot;),&quot;Malaysia&quot;,&quot;&quot;))</defaultValue>
    <description>Denotes the country of an account</description>
    <inlineHelpText>Denotes the country of an account</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>