unpackaged/main/default/objects/Account/fields/Create_New_Log_A_Call__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Log_A_Call__c</fullName>
    <label>Create New Log A Call</label>
    <length>255</length>
    <type>Text</type>
</CustomField>