unpackaged/main/default/objects/Account/fields/Created_From_AdminNet__c.field-meta.xml
<CustomField>
    <fullName>Created_From_AdminNet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Equals to true if agent is created from adminNet.</description>
    <label>Created From AdminNet</label>
    <type>Checkbox</type>
</CustomField>