unpackaged/main/default/objects/Account/fields/Credit_Hold__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hold__c</fullName>
    <label>Credit Hold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>