unpackaged/main/default/objects/Account/fields/CS_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>CS_Approval_Status__c</fullName>
    <inlineHelpText>This indicates the finance approval status of this account.  Once accounts are approved, certain billing info cannot change without triggering a revocation of existing approvals.   Please refer to the &quot;Pre approval status&quot; to ensure data quality.</inlineHelpText>
    <label>AR Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Approved - All Billing Methods</fullName>
            </value>
            <value>
                <fullName>Rejected - Manually</fullName>
            </value>
            <value>
                <fullName>Rejected - Data Set Changed</fullName>
            </value>
            <value>
                <fullName>Approved - Pre Payment Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>