unpackaged/main/default/objects/Account/fields/current_renewal_owner__c.field-meta.xml
<CustomField>
    <fullName>current_renewal_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>current renewal owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>