unpackaged/main/default/objects/Account/fields/Current_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Current_Subscription__c</fullName>
    <label>Current Subscription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>