unpackaged/main/default/objects/Account/fields/Current_Subscription_Code__c.field-meta.xml
<CustomField>
    <fullName>Current_Subscription_Code__c</fullName>
    <label>Current Subscription Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>