unpackaged/main/default/objects/Account/fields/Current_Subscription_Spending__c.field-meta.xml
<CustomField>
    <fullName>Current_Subscription_Spending__c</fullName>
    <label>Current Subscription Spending</label>
    <summarizedField>Opportunity.Summary_Of_Subscription_Item__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Include_Subscription_Ext__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Is_Current_Subscription__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>