unpackaged/main/default/objects/Account/fields/Current_Subscription_Spending_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Subscription_Spending_Amount__c</fullName>
    <label>Current Subscription Spending Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>