unpackaged/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Created a custom field as standard field &#39;Type&#39; cannot be mapped in lead mapping</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
                <default>true</default>
                <label>Developer</label>
            </value>
            <value>
                <fullName>Non-Property</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Media Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>