unpackaged/main/default/objects/Account/fields/Default_Invoice_Line_Layout__c.field-meta.xml
<CustomField>
    <fullName>Default_Invoice_Line_Layout__c</fullName>
    <label>Default Invoice Line Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contracted Volume | Billable Volume | Rate | Amount</fullName>
            </value>
            <value>
                <fullName>Billable Volume | Rate | Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>