unpackaged/main/default/objects/Account/fields/Default_IO_Template__c.field-meta.xml
<CustomField>
    <fullName>Default_IO_Template__c</fullName>
    <description>Indicates what type of IO template the client uses.</description>
    <inlineHelpText>What IO template does this client use?</inlineHelpText>
    <label>Default IO Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
                <default>true</default>
                <label>Client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>