unpackaged/main/default/objects/Account/fields/Default_T_Cs__c.field-meta.xml
<CustomField>
    <fullName>Default_T_Cs__c</fullName>
    <description>Indicates what type of terms &amp; conditions for this client</description>
    <inlineHelpText>What type of Terms &amp; Conditions for this account&#39;s deals?

Spotify - unamended Spotify T&amp;C&#39;s 
Client - amended Spotify T&amp;C&#39;s or Client T&amp;C&#39;s</inlineHelpText>
    <label>Default T&amp;C&#39;s</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spotify</fullName>
                <default>true</default>
                <label>Spotify</label>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>