unpackaged/main/default/objects/Account/fields/DFP_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>DFP_Company_ID__c</fullName>
    <label>DFP Company ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>