unpackaged/main/default/objects/Account/fields/DFP_ID__c.field-meta.xml
<CustomField>
    <fullName>DFP_ID__c</fullName>
    <label>DFP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>