unpackaged/main/default/objects/Account/fields/DisplayName__c.field-meta.xml
<CustomField>
    <fullName>DisplayName__c</fullName>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>