unpackaged/main/default/objects/Account/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Denotes email id for business account</description>
    <inlineHelpText>Denotes email id for business account</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>