unpackaged/main/default/objects/Account/fields/Expiry_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_Time__c</fullName>
    <description>Stores expiry date/time of Agency.</description>
    <label>Expiry Date Time</label>
    <type>DateTime</type>
</CustomField>