unpackaged/main/default/objects/Account/fields/Guruland_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Guruland_Created_Date__c</fullName>
    <description>Denotes the creation timestamp of corresponding record in PG system</description>
    <inlineHelpText>Denotes the creation timestamp of corresponding record in PG system</inlineHelpText>
    <label>Created Date in PG System</label>
    <type>DateTime</type>
</CustomField>