unpackaged/main/default/objects/Account/fields/iDeveloper_ID__c.field-meta.xml
<CustomField>
    <fullName>iDeveloper_ID__c</fullName>
    <label>iDeveloper ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>