unpackaged/main/default/objects/Account/fields/Industry_Tier_2__c.field-meta.xml
<CustomField>
    <fullName>Industry_Tier_2__c</fullName>
    <description>Tier 2 (Lower) Industry Catagories</description>
    <label>Industry (Tier 2)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Adult Beverages</fullName>
            </value>
            <value>
                <fullName>Alcoholic Beverages</fullName>
            </value>
            <value>
                <fullName>Appliances</fullName>
            </value>
            <value>
                <fullName>Artist/Band</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Auto Parts Retailers</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Big Box Retail</fullName>
            </value>
            <value>
                <fullName>Big-Box Retail</fullName>
            </value>
            <value>
                <fullName>Brands/OEM</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Commercial Vechicles</fullName>
            </value>
            <value>
                <fullName>Commercial Vehicles</fullName>
            </value>
            <value>
                <fullName>Concert</fullName>
            </value>
            <value>
                <fullName>Consumer Electronics</fullName>
            </value>
            <value>
                <fullName>Consumer Electronics/Computing Products</fullName>
            </value>
            <value>
                <fullName>Creative Agency</fullName>
            </value>
            <value>
                <fullName>Credit Cards</fullName>
            </value>
            <value>
                <fullName>Dealerships</fullName>
            </value>
            <value>
                <fullName>Dealerships/LMAs</fullName>
            </value>
            <value>
                <fullName>Digital Media</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Fashion/Apparel</fullName>
            </value>
            <value>
                <fullName>Fashon/Apparel</fullName>
            </value>
            <value>
                <fullName>Festival</fullName>
            </value>
            <value>
                <fullName>Festivals</fullName>
                <label>Festivals/Concerts</label>
            </value>
            <value>
                <fullName>Film</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>