unpackaged/main/default/objects/Account/fields/Inserted_from_API__c.field-meta.xml
<CustomField>
    <fullName>Inserted_from_API__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether record is inserted from an API</description>
    <inlineHelpText>Denotes whether record is inserted from an API</inlineHelpText>
    <label>Inserted from API</label>
    <type>Checkbox</type>
</CustomField>