unpackaged/main/default/objects/Account/fields/iPP_REA_ID__c.field-meta.xml
<CustomField>
    <fullName>iPP_REA_ID__c</fullName>
    <label>iPP REA ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>