unpackaged/main/default/objects/Account/fields/Ipp_Status__c.field-meta.xml
<CustomField>
    <fullName>Ipp_Status__c</fullName>
    <label>Ipp Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>