unpackaged/main/default/objects/Account/fields/iPP_subscription__c.field-meta.xml
<CustomField>
    <fullName>iPP_subscription__c</fullName>
    <label>iPP subscription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>