unpackaged/main/default/objects/Account/fields/IPP_Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IPP_Subscription_End_Date__c</fullName>
    <label>IPP Subscription End Date</label>
    <type>Date</type>
</CustomField>