unpackaged/main/default/objects/Account/fields/iPP_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>iPP_Sync_Error__c</fullName>
    <label>iPP Sync Error</label>
    <type>TextArea</type>
</CustomField>