unpackaged/main/default/objects/Account/fields/Is_Qualify_Agent_Referral_Program__c.field-meta.xml
<CustomField>
    <fullName>Is_Qualify_Agent_Referral_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether agent is qualify for referral program</description>
    <inlineHelpText>Denotes whether agent is qualify for referral program</inlineHelpText>
    <label>Is Qualify Agent Referral Program</label>
    <type>Checkbox</type>
</CustomField>