unpackaged/main/default/objects/Account/fields/IsAdvance_Plus_Downgrade__c.field-meta.xml
<CustomField>
    <fullName>IsAdvance_Plus_Downgrade__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field will set to true only for the first time agent downgraded from advance plus</description>
    <label>IsAdvance Plus Downgrade</label>
    <type>Checkbox</type>
</CustomField>