unpackaged/main/default/objects/Account/fields/isRewardTierUpdated__c.field-meta.xml
<CustomField>
    <fullName>isRewardTierUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRewardTierUpdated</label>
    <type>Checkbox</type>
</CustomField>