unpackaged/main/default/objects/Account/fields/isSuspended__c.field-meta.xml
<CustomField>
    <fullName>isSuspended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSuspended</label>
    <type>Checkbox</type>
</CustomField>