unpackaged/main/default/objects/Account/fields/Key_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Type__c</fullName>
    <description>Denotes the tier of business accounts- Gold, Silver and Bronze</description>
    <inlineHelpText>Denotes the tier of business accounts- Gold, Silver and Bronze</inlineHelpText>
    <label>Key Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>