unpackaged/main/default/objects/Account/fields/Last_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Follow_Up_Date__c</fullName>
    <description>Field to show last logged call log date</description>
    <label>Last Follow Up Date</label>
    <type>Date</type>
</CustomField>