unpackaged/main/default/objects/Account/fields/Last_Follow_Up_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Follow_Up_Status__c</fullName>
    <label>Last Follow Up Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>