unpackaged/main/default/objects/Account/fields/Last_Outbound_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Outbound_Sync__c</fullName>
    <description>denotes the timestamp of last outbound sync to external systems</description>
    <inlineHelpText>denotes the timestamp of last outbound sync to external systems</inlineHelpText>
    <label>Last Outbound Sync</label>
    <type>DateTime</type>
</CustomField>