unpackaged/main/default/objects/Account/fields/Local_Language_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Local_Language_Account_Name__c</fullName>
    <description>Denotes the account name in local language</description>
    <inlineHelpText>Denotes the account name in local language</inlineHelpText>
    <label>Account Name (Local Language)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>