unpackaged/main/default/objects/Account/fields/LocalLanguage_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>LocalLanguage_Billing_City__c</fullName>
    <description>Denotes billing city in local language</description>
    <inlineHelpText>Denotes billing city in local language</inlineHelpText>
    <label>Billing City (Local Language)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>